Fixed the overflow of the images to which animations was added.

--- a/styles.css
+++ b/styles.css
@@ -470,7 +470,7 @@ ul {
   filter: brightness(0.5) contrast(1);
 }
 
-.card-img-top {
+.card---hun {
   overflow: hidden;
 }
 
